--- a/uebung02/Bahnübergang/Bahnübergang/NuSMV1.tt
+++ b/uebung02/Bahnübergang/Bahnübergang/NuSMV1.tt
@@ -4,14 +4,34 @@
 
 <#=  TransformToNuSMV() #>
 
--- Der Zug überfährt immer den Überfahrtsensor
-LTLSPEC F v.V_SUeberfahrtSensor = L_UeberfahrtZu;
+-- Der Zug überfährt immer den Überfahrtsensor und ist davor nie stehen geblieben
+CTLSPEC A [ v.V_Geschwindigkeit > 0 U v.V_SUeberfahrtSensor = L_UeberfahrtZu];
 
 -- Wenn der Übergang die Sicherungsnachricht erhält, ist er irgendwann auch gesichert
 LTLSPEC G v.V_KanalZuUeb = L_BitteSichern -> (F v.V_SAnschlagssensor = L_SchrankeUnten);
 
 -- Der Zug ist irgendwann immer hinter dem Gefahrenpunkt
-LTLSPEC F v.V_Position > 100;
+CTLSPEC AF v.V_Position > 100;
 
--- Der Zug ist niemals auf einem ungesichtern Bahnübergang
-LTLSPEC G (v.V_Position >= 95 & v.V_Position < 100 -> v.V_SAnschlagssensor = L_SchrankeUnten);
+-- Wenn der Bahnübergang meldet, er sei gesichert, dann ist auch die Schranke unten
+CTLSPEC AG (v.V_KommEinheitUebergang = L_Gesichert -> v.V_SAnschlagssensor = L_SchrankeUnten);
+
+-- Wenn die Schranke unten ist, ist der Übergang im nächsten(!) Schritt (wegen Verzögerung) gesichert
+-- oder er war schon gesichert und öffent sich wieder
+LTLSPEC G (v.V_SAnschlagssensor = L_SchrankeUnten -> X (v.V_KommEinheitUebergang = L_Gesichert | v.V_KommEinheitUebergang = L_Oeffne));
+
+-- Der Zug ist niemals auf einem ungesichertem Bahnübergang
+CTLSPEC AG (v.V_Position >= 95 & v.V_Position < 100 -> v.V_SAnschlagssensor = L_SchrankeUnten);
+
+-- Wenn der Zug bremst, kommt er irgendwann auch zum Stehen
+LTLSPEC G (v.V_Zugnotbremse = L_NotbremseEin -> (F v.V_Geschwindigkeit = 0));
+
+-- Die Schranke ist erst offen, dann geschlossen (wenn Zug Sicherung erfrägt) und am Ende auf jeden Fall wieder offen
+CTLSPEC A [ v.V_SAnschlagssensor = L_SchrankeOben  U 
+		A [ v.V_SAnschlagssensor = L_KeinKontakt U 
+		A [	v.V_SAnschlagssensor = L_SchrankeUnten U
+		A [ v.V_SAnschlagssensor = L_KeinKontakt U  
+		    v.V_SAnschlagssensor = L_SchrankeOben]]]];
+
+-- Wenn sich die Schranke öffnet, ist der Zug hinter dem Gefahrenpunkt oder der Timer ist abgelaufen
+LTLSPEC G ((v.V_SAnschlagssensor = L_SchrankeUnten & X v.V_SAnschlagssensor = L_KeinKontakt) -> (v.V_Countdown = 0 | v.V_Position > 95));
