--- a/uebung02/Bahnübergang/Bahnübergang/NuSMV1.tt
+++ b/uebung02/Bahnübergang/Bahnübergang/NuSMV1.tt
@@ -71,3 +71,7 @@ LTLSPEC (G noFaults) -> (F v.V_Position > SP);
 LTLSPEC (G noFaults) -> (G (v.V_Zugnotbremse = L_NotbremseEin -> (F v.V_Geschwindigkeit = 0)));
 
 
+-- ****ADÄQUATHEIT DER FEHLER****
+
+-- FailureBreaks
+-- Es gibt einen Trace indem der Zug nicht anhält obwohl die Notbremse auslöst
