--- a/uebung02/Bahnübergang/Bahnübergang/DCCA.tt
+++ b/uebung02/Bahnübergang/Bahnübergang/DCCA.tt
@@ -17,10 +17,11 @@ DEFINE noFaults := v.V_FailureBrakes = L_FailureBrakesNo
 DEFINE SP := 100;
 DEFINE GP := 95;
 
+DEFINE hazard := (v.V_Position >= GP & v.V_Position < SP & v.V_SchrankenWinkel != 0);
 
 -- MINIMAL KRITISCHE MENGEN:
 -- {hodometerPos}
-DEFINE faultHodoPos := v.V_FailureBrakes = L_FailureBrakesNo
+DEFINE onlyFaultHodoPos := v.V_FailureBrakes = L_FailureBrakesNo
 				 & v.V_FailureSMotor = L_FailureSMotorNo
 				 & v.V_FaultHodometerSpeed = L_FaultHodometerSpeedNo
 				 & v.V_FaultSecured = L_FaultSecuredNo
@@ -28,7 +29,7 @@ DEFINE faultHodoPos := v.V_FailureBrakes = L_FailureBrakesNo
 				 & v.V_FaultTimer = L_FaultTimerNo;
 
 -- {hodometerSpeed}
-DEFINE faultHodoSpeed := v.V_FailureBrakes = L_FailureBrakesNo
+DEFINE onlyFaultHodoSpeed := v.V_FailureBrakes = L_FailureBrakesNo
 				 & v.V_FailureSMotor = L_FailureSMotorNo
 				 & v.V_FaultHodometerPos = L_FaultHodometerPosNo
 				 & v.V_FaultSecured = L_FaultSecuredNo
@@ -36,7 +37,7 @@ DEFINE faultHodoSpeed := v.V_FailureBrakes = L_FailureBrakesNo
 				 & v.V_FaultTimer = L_FaultTimerNo;
 
 -- {FaultSecured}
-DEFINE faultSecured := v.V_FailureBrakes = L_FailureBrakesNo
+DEFINE onlyFaultSecured := v.V_FailureBrakes = L_FailureBrakesNo
 				 & v.V_FailureSMotor = L_FailureSMotorNo
 				 & v.V_FaultHodometerPos = L_FaultHodometerPosNo
 				 & v.V_FaultHodometerSpeed = L_FaultHodometerSpeedNo
@@ -44,7 +45,7 @@ DEFINE faultSecured := v.V_FailureBrakes = L_FailureBrakesNo
 				 & v.V_FaultTimer = L_FaultTimerNo;
 
 -- {FaultSensor}
-DEFINE faultSensor := v.V_FailureBrakes = L_FailureBrakesNo
+DEFINE onlyFaultSensor := v.V_FailureBrakes = L_FailureBrakesNo
 				 & v.V_FailureSMotor = L_FailureSMotorNo
 				 & v.V_FaultHodometerPos = L_FaultHodometerPosNo
 				 & v.V_FaultHodometerSpeed = L_FaultHodometerSpeedNo
@@ -52,7 +53,7 @@ DEFINE faultSensor := v.V_FailureBrakes = L_FailureBrakesNo
 				 & v.V_FaultTimer = L_FaultTimerNo;
 
 -- {FaultTimer}
-DEFINE faultTimer := v.V_FailureBrakes = L_FailureBrakesNo
+DEFINE onlyFaultTimer := v.V_FailureBrakes = L_FailureBrakesNo
 				 & v.V_FailureSMotor = L_FailureSMotorNo
 				 & v.V_FaultHodometerPos = L_FaultHodometerPosNo
 				 & v.V_FaultHodometerSpeed = L_FaultHodometerSpeedNo
@@ -69,7 +70,20 @@ DEFINE failureBrakesAndSMotor :=
 
 
 -- Sanity check: Ohne faults geht alles gut!
-LTLSPEC (G noFaults) -> (G (v.V_Position >= GP & v.V_Position < SP -> v.V_SchrankenWinkel = 0));
+LTLSPEC (G noFaults) -> (G !hazard);
+
+-- TODO: Diese Formel ist falsch, das zeigt, dass HodoSpeed alleine ausreicht,
+-- um den Hazard auszulösen. Aus irgendeinem Grund ist die korrespondierende
+-- CTL-Formel trotzdem falsch.
+
+-- LTLSPEC (G onlyFaultHodoSpeed) -> (G !hazard);
 
 -- Single points of failure reichen um alles kaputt zu machen
-LTLSPEC faultSecured U (v.V_Position >= GP & v.V_Position < SP & v.V_SchrankenWinkel != 0);
+CTLSPEC E [ onlyFaultSecured U hazard];
+CTLSPEC E [ onlyFaultSensor U hazard];
+CTLSPEC E [ onlyFaultTimer U hazard];
+CTLSPEC E [ onlyFaultHodoPos U hazard];
+CTLSPEC E [ onlyFaultHodoSpeed U hazard];
+
+-- FailureBrakes und FailureSMotor müssen zusammen auftreten
+CTLSPEC E [ failureBrakesAndSMotor U hazard];
