--- a/uebung02/Bahnübergang/Bahnübergang/NuSMV1.tt
+++ b/uebung02/Bahnübergang/Bahnübergang/NuSMV1.tt
@@ -6,13 +6,13 @@
 
 -- ****DEFINITIONS***
 
-DEFINE noFaults := v.V_FailureBrakes = L_FailureBrakesNo
-				 & v.V_FailureSMotor = L_FailureSMotorNo
-				 & v.V_FaultHodometerPos = L_FaultHodometerPosNo
-				 & v.V_FaultHodometerSpeed = L_FaultHodometerSpeedNo
-				 & v.V_FaultSecured = L_FaultSecuredNo
-				 & v.V_FaultSensor = L_FaultSensorNo
-				 & v.V_FaultTimer = L_FaultTimerNo;
+DEFINE noFaults := v.V_FailureBrakes = L_No
+				 & v.V_FailureSMotor = L_No
+				 & v.V_FaultHodometerPos = L_No
+				 & v.V_FaultHodometerSpeed = L_No
+				 & v.V_FaultSecured = L_No
+				 & v.V_FaultSensor = L_No
+				 & v.V_FaultTimer = L_No;
 
 DEFINE SP := 100;
 DEFINE GP := 95;
@@ -62,30 +62,30 @@ LTLSPEC (G noFaults) -> (G ((v.V_SAnschlagssensor = L_SchrankeUnten & X v.V_SAns
 -- EIGENSCHAFTEN ZUG
 
 -- Der Zug überfährt immer den Überfahrtsensor und ist davor nie stehen geblieben
-LTLSPEC (G noFaults) -> (G ( v.V_Geschwindigkeit > 0 U v.V_SUeberfahrtSensor = L_UeberfahrtZu));
+LTLSPEC (G noFaults) -> (G ( v.V_Geschwindigkeit > 0 U v.V_UeberfahrtSensor = L_Zu));
 LTLSPEC (G noFaults) -> (G ( v.V_Geschwindigkeit > 0 U v.V_Position > SP));
 
 -- Der Zug ist irgendwann immer hinter dem Gefahrenpunkt
 LTLSPEC (G noFaults) -> (F v.V_Position > SP);
 
 -- Wenn der Zug bremst, kommt er irgendwann auch zum Stehen
-LTLSPEC (G noFaults) -> (G (v.V_Zugnotbremse = L_NotbremseEin -> (F v.V_Geschwindigkeit = 0)));
+LTLSPEC (G noFaults) -> (G (v.V_Notbremse = L_Ein -> (F v.V_Geschwindigkeit = 0)));
 
 
 -- ****ADÄQUATHEIT DER FEHLER****
 
 --- FaultHodometerPos
 -- Wenn die Positionsbestimmung des Hodometers fehlschlägt, ist danach die tatsächliche Position größer als die gemeldete
-LTLSPEC (F v.V_FaultHodometerPos != L_FaultHodometerPosNo) -> F (v.V_Position > v.V_ReportedPosition);
+LTLSPEC (F v.V_FaultHodometerPos != L_No) -> F (v.V_Position > v.V_ReportedPosition);
 
 --- FaultHodometerSpeed
 -- Wenn die Geschwindigkeitsanzeige falsche Werte liefert, ist die gemessene Geschwindigkeit im nächsten Schritt immer 1
-LTLSPEC G (v.V_FaultHodometerSpeed != L_FaultHodometerSpeedNo & v.V_Position <= 115 -> X v.V_ReportedSpeed = 1)
+LTLSPEC G (v.V_FaultHodometerSpeed != L_No & v.V_Position <= 115 -> X v.V_ReportedSpeed = 1)
 
 --- FailureSMotor
 -- Wenn der Schrankenmotor versagt, während sie offen ist, geht sie nie zu
-LTLSPEC (v.V_SchrankenWinkel = 90 U v.V_FailureSMotor != L_FailureSMotorNo) -> G v.V_SchrankenWinkel != 0;
+LTLSPEC (v.V_SchrankenWinkel = 90 U v.V_FailureSMotor != L_No) -> G v.V_SchrankenWinkel != 0;
 
 -- FailureBreaks
 -- Wenn die Bremsen irgendwann versagen während der Zug fährt, hält der Zug niemals an
-LTLSPEC (F v.V_FailureBrakes != L_FailureBrakesNo & G v.V_Geschwindigkeit > 0) -> G v.V_Geschwindigkeit != 0;
+LTLSPEC (F v.V_FailureBrakes != L_No & G v.V_Geschwindigkeit > 0) -> G v.V_Geschwindigkeit != 0;
