--- a/uebung02/Bahnübergang/Bahnübergang/NuSMV1.tt
+++ b/uebung02/Bahnübergang/Bahnübergang/NuSMV1.tt
@@ -76,16 +76,22 @@ LTLSPEC (G noFaults) -> (G (v.V_Notbremse = L_Ein -> (F v.V_Geschwindigkeit = 0)
 
 --- FaultHodometerPos
 -- Wenn die Positionsbestimmung des Hodometers fehlschlägt, ist danach die tatsächliche Position größer als die gemeldete
-LTLSPEC (F v.V_FaultHodometerPos != L_No) -> F (v.V_Position > v.V_ReportedPosition);
+LTLSPEC G ((v.V_FaultHodometerPos != L_No & v.V_Position < 100) -> X (v.V_Position > v.V_ReportedPosition));
 
 --- FaultHodometerSpeed
 -- Wenn die Geschwindigkeitsanzeige falsche Werte liefert, ist die gemessene Geschwindigkeit im nächsten Schritt immer 1
 LTLSPEC G (v.V_FaultHodometerSpeed != L_No & v.V_Position <= 115 -> X v.V_ReportedSpeed = 1)
 
 --- FailureSMotor
--- Wenn der Schrankenmotor versagt, während sie offen ist, geht sie nie zu
+-- Wenn der Schrankenmotor versagt, während die Schranke offen ist, geht sie nie zu
 LTLSPEC (v.V_SchrankenWinkel = 90 U v.V_FailureSMotor != L_No) -> G v.V_SchrankenWinkel != 0;
 
 -- FailureBreaks
 -- Wenn die Bremsen irgendwann versagen während der Zug fährt, hält der Zug niemals an
 LTLSPEC (F v.V_FailureBrakes != L_No & G v.V_Geschwindigkeit > 0) -> G v.V_Geschwindigkeit != 0;
+
+
+-- FaultSensor
+-- FaultTimer
+-- Es gibt einen Pfad
+-- FaultSecured
